# GeometryService

./: .gitattributes  CMakeLists.txt  COPYING  Dockerfile  README.md  docker_build.sh  docker_run.sh  nginx_geometry.conf  spawn_geometry_service
data/: CMakeLists.txt  meta.ker
data/generic/fk/: bodyfixed_assoc.tf  esa_stations.tf  geomagnetic.tf
data/generic/ik/: esa_stations.ti
data/generic/sclk/: tdt_shifted.tsc
data/generic/spk/: esa_stations.bsp  humain_ants.bsp
data/generic/topo/fk/: esa_topo.tf  humain_topo.tf
data/generic/topo/spk/: esa_stns.bsp  humain_ants.bsp
data/kernels/67p/fk/: 67p.tf
data/kernels/67p/spk/: CORL_DL_006_01____H__00156.BSP
data/kernels/cluster/spk/: cluster1.bsp  cluster2.bsp  cluster3.bsp  cluster4.bsp
data/kernels/earth/pck/: earth_latest_high_prec.bpc  update
data/kernels/picard/fk/: picard.tf
data/kernels/picard/spk/: picard.bsp
data/kernels/proba2/fk/: proba2.tf
data/kernels/proba2/spk/: proba2_tle_0001.bsp  update
data/kernels/proba3/fk/: proba3.id  proba3.tf
data/kernels/proba3/ik/: proba3_aspiics.ti  proba3_ci.ti
data/kernels/proba3/sclk/: proba3-fict.tsc
data/kernels/proba3/spk/: proba3-csc-fict.bsp  proba3-osc-fict.bsp  proba3-relative-fict.bsp  proba3.bsp
data/kernels/psp/fk/: psp.tf
data/kernels/psp/spk/: SPP20180731P2_ephem_96.bsp  spp_nom_20180812_20250831_v034_RO1_TCM1.bsp  spp_nom_20180812_20250831_v035_RO2.bsp
data/kernels/sdo/fk/: sdo.tf
data/kernels/sdo/spk/: sdo.bsp
data/kernels/soho/spk/: soho_orbit.bsp  update
data/kernels/solo/sclk/: solo_ANC_soc-sclk-fict_20000101_V01.tsc  solo_ANC_soc-sclk_20000101_20160712_V01.tsc
data/kernels/solo/spk/: -2018_Option_D_CReMA_Issue4-0.spk  -2018_Option_E_CReMA_Issue4-0.spk  -2019_February_Out_CReMA_Issue4-0.spk  2018_October_CReMA_Issue4-0.spk  solo_ANC_soc-orbit_20190214-20290611_V01.bsp  solo_ANC_soc-orbit_20200207-20300902_V01.bsp
data/kernels/spp/fk/: spp.tf
data/kernels/spp/spk/: SPP20180731P2_ephem.bsp
data/kernels/stereo/fk/: stereo_rtn.tf  stereo_xtra.tf
data/kernels/stereo/spk/: ahead_2009_050_definitive_predict.epm.bsp  ahead_2015_072_01.epm.bsp  ahead_2015_072_02.epm.bsp  ahead_2015_076_01.epm.bsp  ahead_2015_092_01.epm.bsp  ahead_2015_105_01.epm.bsp  ahead_2015_121_01.epm.bsp  behind_2009_049_definitive_predict.epm.bsp  behind_2014_271_01.epm.bsp  behind_2014_290_01.epm.bsp  behind_2014_302_01.epm.bsp  behind_2014_318_01.epm.bsp  behind_2014_329_01.epm.bsp  behind_2014_353_01.epm.bsp  behind_2015_002_01.epm.bsp  behind_2015_015_01.epm.bsp  behind_2015_030_01.epm.bsp  behind_2015_042_01.epm.bsp  behind_2015_058_01.epm.bsp  behind_2015_072_01.epm.bsp  behind_2015_085_01.epm.bsp  behind_2015_100_01.epm.bsp  behind_2015_114_01.epm.bsp
geometry/: README.md  setup.py
geometry/GeometryService/: geometry_spice.py  service.py
geometry/geometry/: __init__.py  geometry.py  geometry_spice.py  service.py
service/: setup.py
service/GeometryService/: geometry.py  geometry_spice.py  service.py
support/: CMakeLists.txt
support/cache/: Python-2.7.13.tgz.REMOVED.git-id
support/python/: CMakeLists.txt  find_sitepackages.py  gen-spicey-diff.sh  install_spicey.sh  spicey.diff
support/python/SpiceyPy/: setup.py
support/spice/: CMakeLists.txt  README.sidc  spice_init.c
support/spice/python/: CMakeLists.txt  PySPICE.diff  README.sidc  gen_spice_binding.sh
support/spice/python/PySPICE/: mkwrapper.py  pyspice.c  pyspice.h  setup.py  spicemodule.c
