
configure_file(${CMAKE_CURRENT_SOURCE_DIR}/meta.ker ${CMAKE_CURRENT_BINARY_DIR}/meta.ker)
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/meta.ker DESTINATION ${SIDC_INSTALL_DATA}/generic)

install(DIRECTORY generic DESTINATION ${SIDC_INSTALL_DATA} PATTERN ".svn" EXCLUDE)
install(DIRECTORY kernels DESTINATION ${SIDC_INSTALL_DATA} PATTERN ".svn" EXCLUDE)
